--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://atharvadumbre.github.io/atharvadumbre.github.io/",
+  "homepage": "https://atharvadumbre.github.io/atharvadumbre.github.io",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
