--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.25.8",
     "gh-pages": "^6.1.1"
   }
 }
